Add common logging